--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         background-position: center;
         background-image: url(loading.jpg); /* Путь к фоновому изображению */
         background-color: #00000; /* Цвет фона */
+        background-size:50%;
         }
         tumblr_controls, .tmblr-iframe{display:none !important;}
         </style>
