--- a/index.html
+++ b/index.html
@@ -96,6 +96,35 @@
         background-color: #00000; /* Цвет фона */
         background-size:50%;
         }
+             button {
+
+  display: inline-block;   
+   background-color: gray;   
+   width: 50px;   
+   height: 50px;   
+   text-align: center;   
+   border-radius: 4px;   
+   margin: 30px;   
+   position: fixed;   
+   bottom: 30px;   
+   right: 30px;    
+   z-index: 1000; 
+   transition: 2s;
+   opacity: 0.2;
+   border-radius: 100px
+}
+
+button:hover {   
+   cursor: pointer;   
+   opacity: 1;
+   outline: none;
+} 
+
+
+button:enabled{
+     cursor: pointer;  
+   outline: none;
+}
         tumblr_controls, .tmblr-iframe{display:none !important;}
         </style>
     </head>
@@ -104,6 +133,7 @@
             <div id="info">
                 Body
             </div>
+             <button class="no-blur"></button>
             <script type="module">
             import * as THREE from 'https://threejs.org/build/three.module.js';
             import Stats from 'https://threejs.org/examples/jsm/libs/stats.module.js';
@@ -196,7 +226,19 @@
             //load mesh
             var manager = new THREE.LoadingManager();
             manager.onLoad = function ( ) {
-            container.className='no-blur'
+            container.className='no-blur';
+                var button=document.getElementsByTagName("button")[0];
+            button.className='no-blur';
+                button.addEventListener('click',function(){
+                    if(document.fullscreen==false){
+
+                    document.body.requestFullscreen()
+                    }
+                    else{
+                        document.exitFullscreen();
+                    }
+                });
+            };
             };
             var texture = new THREE.TextureLoader().load( 'body1.jpg' );
             var material = new THREE.MeshToonMaterial( { map: texture, morphTargets: true,skinning: true } );
