--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@ button:enabled{
             
             
             controls = new OrbitControls( camera, renderer.domElement );
+            controls.enableDamping = true;
+            controls.dampingFactor = 0.05;
             controls.target.set( 0, 100, 0 );
             controls.update();
             window.addEventListener( 'resize', onWindowResize, false );
@@ -302,6 +304,7 @@ button:enabled{
             var delta = clock.getDelta();
             if ( mixer ) mixer.update( delta );
             renderer.render( scene, camera );
+            controls.update();
             stats.update();
             }
             </script>
