--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ button:enabled{
             import Stats from 'https://threejs.org/examples/jsm/libs/stats.module.js';
             import { OrbitControls } from 'https://threejs.org/examples/jsm/controls/OrbitControls.js';
             import { FBXLoader } from 'https://threejs.org/examples/jsm/loaders/FBXLoader.js';
-            import { VRButton } from 'https://raw.githubusercontent.com/mrdoob/three.js/master/examples/jsm/webxr/VRButton.js';
+            import { VRButton } from 'https://threejs.org/examples/jsm/webxr/VRButton.js';
             
             
             var container, stats, controls;
