--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ button:enabled{
             }
             
             function animate() {
-            renderer.setAnimationLoop(render);
+            renderer.setAnimationLoop(animate);
             var delta = clock.getDelta();
             if ( mixer ) mixer.update( delta );
             renderer.render( scene, camera );
