--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ button:enabled{
             // stats
             stats = new Stats();
             container.appendChild( stats.dom );
-            document.body.appendChild( VRButton.createButton( renderer ) );   
+           // document.body.appendChild( VRButton.createButton( renderer ) );   
             }
             function onWindowResize() {
             camera.aspect = window.innerWidth / window.innerHeight;
